Fix href. Fix spacing in spans. Re-arrange icons.

--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -41,7 +41,7 @@ a.gold:hover {
     .hide-header-not-combined {
 
         div {
-            font-size: 4rem;
+            font-size: 3rem;
             text-transform: uppercase;
             font-weight: bold;
         }
